@@ -134,7 +134,7 @@ public class OceanTheme extends DefaultMetalTheme {
             new BorderUIResource.LineBorderUIResource(getPrimary1());
         // .30 0 DDE8F3 white secondary2
         java.util.List<?> buttonGradient = Arrays.asList(
-                 new Object[] {new Float(.3f), new Float(0f),
+                 new Object[] {Float.valueOf(.3f), Float.valueOf(0f),
                  new ColorUIResource(0xDDE8F3), getWhite(), getSecondary2() });
 
         // Other possible properties that aren't defined:
@@ -150,7 +150,7 @@ public class OceanTheme extends DefaultMetalTheme {
         Object directoryIcon = getIconResource("icons/ocean/directory.gif");
         Object fileIcon = getIconResource("icons/ocean/file.gif");
         java.util.List<?> sliderGradient = Arrays.asList(new Object[] {
-            new Float(.3f), new Float(.2f),
+            Float.valueOf(.3f), Float.valueOf(.2f),
             c8ddf2, getWhite(), new ColorUIResource(SECONDARY2) });
 
         Object[] defaults = new Object[] {
@@ -192,7 +192,7 @@ public class OceanTheme extends DefaultMetalTheme {
             "Menu.opaque", Boolean.FALSE,
 
             "MenuBar.gradient", Arrays.asList(new Object[] {
-                     new Float(1f), new Float(0f),
+                     Float.valueOf(1f), Float.valueOf(0f),
                      getWhite(), dadada,
                      new ColorUIResource(dadada) }),
             "MenuBar.borderColor", cccccc,
